{
    "name": "RunnerInputAction",
    "maps": [
        {
            "name": "Gameplay",
            "id": "766c4867-290e-410e-82f8-3939e6c8ae4f",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "ad9f6c1e-a819-4825-8d61-8ce7919e5eaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "d43275a5-a0d4-4e71-bb24-22f4199fb4e7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartDrag",
                    "type": "PassThrough",
                    "id": "6fe46fb8-501e-48ce-8e8c-0a3b9e9257e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "EndDrag",
                    "type": "PassThrough",
                    "id": "055df4b9-f531-486d-9a27-1e25f2f1da79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69756e17-a356-4436-aa22-ea0ecb773251",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "ComputerControls",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65fbd364-0f1b-4ac0-bb66-b3940c0b7bd9",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23c97de0-bfd3-44ec-a887-512c1d06bd54",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "ComputerControls",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f6d654a-5001-43f7-a7f2-bfda242fc0ab",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc5b8ee5-d71d-4678-9c97-70ee1ef76a25",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "ComputerControls",
                    "action": "StartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8d4d4f6-b417-4038-96de-ec1d509818dc",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "StartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c25b7d5-c1bd-49e7-8303-f7887978ec55",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "ComputerControls",
                    "action": "EndDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08fed17c-24cf-4798-a2bd-824eced89e85",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "EndDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ComputerControls",
            "bindingGroup": "ComputerControls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}